# Lynx

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  build.rs  renovate.json
.github/actions/setup-frontend/: action.yml
.github/workflows/: README.md  build-binaries.yml  docker-publish.yml  integration-tests.yml  performance-benchmark.yml  pr-quality-gate.yml  release.yml
.jules/: atlas.md
benches/: redirect_hot_path.rs
docs/: ANALYTICS.md  ANALYTICS_PERFORMANCE.md  BENCHMARKS.md  BENCHMARK_RESULTS.md  CLOUDFLARE_SETUP.md  DELETE_PROTECTION.md  IMPLEMENTATION_SUMMARY.md  PATCHING.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PROFILING_RUST.md  REDIRECT_HOT_PATH.md
docs/agents/: database.md  engineering-standards.md  frontend.md  testing.md
docs/benchmarks/: 2026-07-12-cached-projection-and-batching.md  2026-07-12-nonblocking-click-enqueue.md  2026-07-12-ownership-transfer-before-nonblocking.md  2026-07-12-retained-cache-projection.md  README.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  AuthContext.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: AuthProvider.tsx  CreateUrlForm.tsx  Dashboard.tsx  Login.tsx  OAuthCallback.tsx  SearchBar.tsx  SearchPanel.tsx  ThemeProvider.tsx  UrlDetails.tsx  UrlList.tsx
frontend/src/components/layout/: AppHeader.tsx  Logo.tsx  Page.tsx
frontend/src/components/ui/: Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  CopyButton.tsx  Dialog.tsx  EmptyState.tsx  IconButton.tsx  Input.tsx  SegmentedControl.tsx  Skeleton.tsx  Spinner.tsx  StatCard.tsx  Table.tsx  ThemeToggle.tsx
frontend/src/contexts/: AuthContext.ts  ThemeContext.ts
frontend/src/lib/: cn.ts  oidc.ts
frontend/src/polyfills/: base64.ts
frontend/src/types/: global.d.ts
frontend/src/utils/: date.ts  errorHandling.ts  url.ts
scripts/: check-docs-drift.sh  profile-flamegraph.sh
src/: cursor.rs  lib.rs  main.rs
src/analytics/: aggregator.rs  geoip.rs  ip_extractor.rs  mod.rs  models.rs  storage.rs
src/api/: analytics.rs  code_param.rs  handlers.rs  mod.rs  routes.rs  static_files.rs
src/auth/: cloudflare.rs  mod.rs  oauth.rs
src/config/: mod.rs
src/models/: mod.rs  url.rs
src/redirect/: handlers.rs  middleware.rs  mod.rs  routes.rs
src/storage/: cached.rs  mod.rs  patch_tests.rs  postgres.rs  sqlite.rs  trait_def.rs
tests/: README.md  analytics_api_integration.rs  analytics_integration.rs  analytics_performance_test.sh  analytics_prune_align_integration.rs  analytics_stress_test.rs  benchmark-analytics.sh  benchmark.sh  benchmark_harness.rs  concurrent_api_integration.rs  concurrent_test.sh  external_harness.rs  integration_test.sh  performance_harness.rs  redirect_integration.rs  storage_integration_test.rs  url_history_api_integration.rs  visualize_benchmarks.py
tests/performance_harness/: profiling.rs
