[package]
name = "lynx"
version = "0.1.0"
edition = "2021"

[lib]
name = "lynx"
path = "src/lib.rs"

[[bin]]
name = "lynx"
path = "src/main.rs"

[[bench]]
name = "redirect_hot_path"
harness = false

[features]
# Rootless, in-process CPU sampling for the ignored performance harness only.
# Normal builds and release artifacts do not enable or compile this dependency.
profiling = ["dep:pprof"]

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate"] }

# Caching and concurrent data structures
dashmap = "6"
moka = { version = "0.12", features = ["future"] }

# Configuration
config = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"
async-trait = "0.1"

# URL shortening
rand = { version = "0.10", features = ["thread_rng"] }
statrs = "0.18"

# Environment variables
dotenvy = "0.15"

# Authentication
jsonwebtoken = { version = "11", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }

# Cursor pagination
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"

# Static file embedding
rust-embed = "8"
mime_guess = "2"

# CLI
clap = { version = "4", features = ["derive"] }
chrono = "0.4"

# Analytics - GeoIP
maxminddb = { version = "0.27", features = ["mmap", "simdutf8"] }

# IP address and CIDR manipulation
ipnet = "2"

# In-process sampling for the opt-in performance harness.
pprof = { version = "0.15", default-features = false, features = ["flamegraph"], optional = true }

[build-dependencies]
statrs = "0.18"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.profiling]
inherits = "release"
debug = 1
strip = "none"

[dev-dependencies]
divan = "0.1"
